@@ -5,6 +5,8 @@ Repository: https://github.com/RayOfDaylon/Defcon
 September 2, 2023
 
 
+Added sprite atlas for ghost enemy on Details arena.
+
 Stars are occluded by terrain. (arcade mismatch) The arcade game 
 simply didn't draw stars below the max terrain elevation, 
 presumably to save CPU cycles by not viz-testing every frame.
